# PypiProjectModel

./: setup.cfg  setup.py
temp/: How Upload Project.txt
