[metadata]
name = 
version = attr: 
url = 
author = 
author_email = 
description = 
long_description = file: README.md
license = MIT
classifiers =
    Development Status :: 
    Environment :: 
    Framework :: 
    Intended Audience :: 
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: 
project_urls =
    Source = 

[options]
python_requires = >=3.8
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    