[metadata]
name = 
version = attr: 
url = 
author = 
author_email = 
description = 
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
license_files = LICENSE.txt
classifiers =
    Development Status :: 
    Environment :: 
    Framework :: 
    Intended Audience :: 
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: 
project_urls =
    Source = 

[options]
python_requires = >=3.8
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    